# FineTunned-CycleGAN

./: .env.example  .gitignore  fine_tuning_experiment.ipynb  main.py  pyproject.toml
openspec/: config.yaml
openspec/changes/archive/2026-07-13-dataset-notebook-first-iteration/: archive-report.md  exploration.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-07-14-pretrained-model-import-and-test/: design.md  exploration.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-14-pretrained-model-import-and-test/specs/model-inference/: spec.md
openspec/changes/fine-tuning-cyclegan-lion-cheetah/: design.md  proposal.md  tasks.md
openspec/changes/fine-tuning-cyclegan-lion-cheetah/specs/cyclegan-training/: spec.md
openspec/changes/fine-tuning-cyclegan-lion-cheetah/specs/dataset-loading/: spec.md
openspec/changes/fine-tuning-cyclegan-lion-cheetah/specs/model-evaluation/: spec.md
openspec/changes/fine-tuning-cyclegan-lion-cheetah/specs/model-inference/: spec.md
openspec/changes/fine-tuning-cyclegan-lion-cheetah/specs/model-registry/: spec.md
openspec/specs/dataset-preparation/: spec.md
src/: dataset.py  download_and_prepare.py  evaluation.py  inference.py  model.py  registry.py  training.py
