[project]
name = "finetunned-cyclegan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=1.0.2",
    "pillow>=11.0.0",
    "matplotlib>=3.9.0",
    "ipykernel>=6.29.0",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
    "ipywidgets>=8.1.8",
    "pandas>=2.2.0",
    "lpips>=0.1.4",
    "clean-fid>=0.1.35",
    "scipy>=1.13.0",
]
